--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +12,7 @@
       async
     ></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>Alonso Novoa / Full Stack Developer</title>
+    <title>Alonso Novoa | Portafolio</title>
   </head>
   <body>
     <nav class="navbar">
@@ -78,32 +78,40 @@
               <h2>Mis habilidades</h2>
             </div>
             <div class="skill__item">
-              <img src="/assets/android.svg" alt="Android"/>
-              <div class="skill__name">Android</div>
-            </div>
-            <div class="skill__item">
-              <img src="/assets/flutter.svg" alt="Flutter"/>
-              <div class="skill__name">Flutter</div>
-            </div>
-            <div class="skill__item">
               <img src="/assets/angular.svg" alt="Angular"/>
               <div class="skill__name">Angular</div>
+            </div>
+            <div class="skill__item">
+              <img src="/assets/react-2.svg" alt="React"/>
+              <div class="skill__name">React</div>
             </div>
             <div class="skill__item">
               <img src="/assets/vue.svg" alt="VueJS"/>
               <div class="skill__name">VueJS</div>
             </div>
             <div class="skill__item">
-              <img src="/assets/laravel.svg" alt="Laravel"/>
-              <div class="skill__name">Laravel</div>
-            </div>
-            <div class="skill__item">
               <img src="/assets/nodejs.svg" alt="NodeJS"/>
               <div class="skill__name">NodeJS</div>
             </div>
             <div class="skill__item">
-              <img src="/assets/git.svg" alt="GIT"/>
-              <div class="skill__name">GIT</div>
+              <img src="/assets/laravel.svg" alt="Laravel"/>
+              <div class="skill__name">Laravel</div>
+            </div>
+            <div class="skill__item">
+              <img src="/assets/django.svg" alt="Django"/>
+              <div class="skill__name">Django</div>
+            </div>
+            <div class="skill__item">
+              <img src="/assets/spring-3.svg" alt="Spring Boot"/>
+              <div class="skill__name">Spring Boot</div>
+            </div>
+            <div class="skill__item">
+              <img src="/assets/dot-net-core.svg" alt="ASP"/>
+              <div class="skill__name">ASP.Net Core</div>
+            </div>
+            <div class="skill__item">
+              <img src="/assets/flutter.svg" alt="Flutter"/>
+              <div class="skill__name">Flutter</div>
             </div>
           </div>
         </div>
@@ -113,7 +121,7 @@
     <section id="portfolio">
       <div class="container">
         <h2 class="section__title">Portafolio</h2>
-        <h3 class="section__subtitle">Aquí puedes ver los proyectos en los que he trabajado.</h3>
+        <h3 class="section__subtitle">Aquí puedes ver algunos de los proyectos en los que he trabajado.</h3>
         <div class="portfolio__grid">
 
           <div class="portfolio__item">
@@ -124,12 +132,12 @@
             <div class="portfolio__description">
               <h3 class="portfolio__description--title">El Conde Barbershop</h3>
               <p class="portfolio__description--text">
-                Aplicación web hecha en Angular y Laravel como API restful. Reserva de citas, generación de reportes, gestión de clientes, ganancias, gastos y almacén.
+                Aplicación web hecha en Angular y Laravel. Reserva de citas, generación de reportes, gestión de clientes, ganancias, gastos y almacén.
               </p>
-              <!-- <div class="buttons__container">
+              <div class="buttons__container">
                 <a
                   class="button"
-                  href="#"
+                  href="https://elconde-frontend.onrender.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -137,30 +145,38 @@
                 </a>
                 <a
                   class="button"
-                  href="#"
+                  href="https://github.com/aisaacnsoto/elconde-frontend"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
-                  <i class="fab fa-github"></i> Repositorio
+                  <i class="fab fa-github"></i> Frontend
                 </a>
-              </div> -->
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/elconde-backend"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Backend
+                </a>
+              </div>
             </div>
           </div>
 
           <div class="portfolio__item">
             <picture>
-              <source type="image/jpeg" srcset="./projects/izipay.png" />
+              <source type="image/jpeg" srcset="./projects/tienda-virtual-mean-stack.png" />
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
             <div class="portfolio__description">
-              <h3 class="portfolio__description--title">PuntoDventa Izipay</h3>
+              <h3 class="portfolio__description--title">Tienda virtual Angular NodeJS</h3>
               <p class="portfolio__description--text">
-                Aplicación web multisede desarrollada en HTML, CSS, Javascript y PHP puro. Gestión de ventas, estado de productos, dashboard, productividad de ejecutivos de ventas y generación de reportes.
+                Tienda virtual con simulación de carrito de compras, gestión de productos y subida de imágenes. Hecho en MongoDB, Express, Angular y NodeJS.
               </p>
-              <!-- <div class="buttons__container">
+              <div class="buttons__container">
                 <a
                   class="button"
-                  href="#"
+                  href="https://tienda-virtual-mean-stack-frontend.onrender.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -168,13 +184,246 @@
                 </a>
                 <a
                   class="button"
-                  href="#"
+                  href="https://github.com/aisaacnsoto/tienda-virtual-mean-stack-frontend"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
-                  <i class="fab fa-github"></i> Repositorio
+                  <i class="fab fa-github"></i> Frontend
                 </a>
-              </div> -->
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/tienda-virtual-mean-stack-backend"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Backend
+                </a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./projects/social-network-mean-stack.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Red Social Angular NodeJS</h3>
+              <p class="portfolio__description--text">
+                Red social que te permite publicar estados, comentar, dar likes y seguir a otros usuarios. Hecho en MongoDB, Express, Angular y NodeJS.
+              </p>
+              <div class="buttons__container">
+                <a
+                  class="button"
+                  href="https://social-network-mean-stack-frontend.onrender.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fas fa-globe-americas"></i> Demo
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/social-network-mean-stack-frontend"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Frontend
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/social-network-mean-stack-backend"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Backend
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./projects/chat-react-firebase.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Chat React</h3>
+              <p class="portfolio__description--text">
+                Chat en vivo con autenticación de Google. Hecho en React y Firebase.
+              </p>
+              <div class="buttons__container">
+                <a
+                  class="button"
+                  href="https://chat-react-firebase-production.up.railway.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fas fa-globe-americas"></i> Demo
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/chat-react-firebase"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Frontend
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./projects/peliculas-vue.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Películas Vue</h3>
+              <p class="portfolio__description--text">
+                Buscador de películas con VueJS haciendo uso de la API OpenMovieDataBase.
+              </p>
+              <div class="buttons__container">
+                <a
+                  class="button"
+                  href="https://peliculas-vue.onrender.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fas fa-globe-americas"></i> Demo
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/peliculas-vue"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Frontend
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./projects/clima-react.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Clima React</h3>
+              <p class="portfolio__description--text">
+                App de clima con React consumiendo la API OpenWeather.
+              </p>
+              <div class="buttons__container">
+                <a
+                  class="button"
+                  href="https://clima-react-production.up.railway.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fas fa-globe-americas"></i> Demo
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/clima-react"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Frontend
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./projects/mapa-django.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Mapa Django</h3>
+              <p class="portfolio__description--text">
+                Mapa usando Django y la librería Folium. Te permite buscar cualquier ciudad y su ubicación en el mapa.
+              </p>
+              <div class="buttons__container">
+                <a
+                  class="button"
+                  href="https://web-production-7d3b.up.railway.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fas fa-globe-americas"></i> Demo
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/mapa-django"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Frontend
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./projects/empleados-springboot.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Empleados Spring Boot</h3>
+              <p class="portfolio__description--text">
+                App de mantenimiento de empleados en Spring Boot y Angular.
+              </p>
+              <div class="buttons__container">
+                <a
+                  class="button"
+                  href="https://empleados-springboot-frontend.onrender.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fas fa-globe-americas"></i> Demo
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/empleados-springboot-frontend"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Frontend
+                </a>
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/empleados-springboot-backend"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Backend
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./projects/peliculas-flutter.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Peliculas Flutter</h3>
+              <p class="portfolio__description--text">
+                App de películas con Flutter haciendo uso de la API TheMovieDataBase.
+              </p>
+              <div class="buttons__container">
+                <a
+                  class="button"
+                  href="https://github.com/aisaacnsoto/peliculas-flutter"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <i class="fab fa-github"></i> Fuente
+                </a>
+              </div>
             </div>
           </div>
 
@@ -227,7 +476,7 @@
     <footer class="footer">
       <div class="container">
         <p>
-          Copyright © 2022. <a href="#">@aisaacnsoto</a> <br />
+          Copyright © 2023. <a href="#">@aisaacnsoto</a> <br />
           All Rights Reserved
         </p>
       </div>
