modificación proyecto tienda virtual

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             </div>
             <div class="skill__item">
               <img src="/assets/vue.svg" alt="VueJS"/>
-              <div class="skill__name">VueJS</div>
+              <div class="skill__name">Vue.js</div>
             </div>
             <div class="skill__item">
               <img src="/assets/nodejs.svg" alt="NodeJS"/>
-              <div class="skill__name">NodeJS</div>
+              <div class="skill__name">Node.js</div>
             </div>
             <div class="skill__item">
               <img src="/assets/laravel.svg" alt="Laravel"/>
@@ -112,6 +112,10 @@
             <div class="skill__item">
               <img src="/assets/flutter.svg" alt="Flutter"/>
               <div class="skill__name">Flutter</div>
+            </div>
+            <div class="skill__item">
+              <img src="/assets/aws.svg" alt="AWS S3"/>
+              <div class="skill__name">AWS S3</div>
             </div>
           </div>
         </div>
@@ -169,9 +173,9 @@
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
             <div class="portfolio__description">
-              <h3 class="portfolio__description--title">Tienda virtual Angular NodeJS</h3>
+              <h3 class="portfolio__description--title">Tienda virtual Angular NodeJS + AWS S3</h3>
               <p class="portfolio__description--text">
-                Tienda virtual con simulación de carrito de compras, gestión de productos y subida de imágenes. Hecho en MongoDB, Express, Angular y NodeJS.
+                Tienda virtual con simulación de carrito de compras, gestión de productos y subida de imágenes a AWS S3. Hecho en MongoDB, Express, Angular y NodeJS.
               </p>
               <div class="buttons__container">
                 <a
